bonus/mongo-db-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mongo-express
  namespace: mongo-db
spec:
  podSelector:
    matchLabels:
      app: mongodb
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: mongo-express
    ports:
    - protocol: TCP
      port: 27017
